# libk4w2

./: CMakeLists.txt  README.md
cmake/: FindNVJPEG.cmake  FindTurboJPEG.cmake  Findlibusb-1.0.cmake  SetupDirectories.cmake  libk4w2util.cmake
examples/: CMakeLists.txt  Makefile  Makefile.liveview  Makefile.opencv  Makefile.opengl  Makefile.simple  liveview.cpp  opencv.cpp  opengl.c  simple.c
include/libk4w2/: decoder.h  kinect2.h  libk4w2.h  registration.h
src/: CMakeLists.txt  decoder.c  decoder_depth_cpu.c  driver.c  driver_libusb.c  driver_v4l2.c  ir_table.c  libk4w2.c  libk4w2.pc.in  misc.c  module.h  registration.c
src/decoder_cl/: depth.cl  depth_cl.c  depth_cl.cpp  depth_kernel.cl  opencl_enum.c
src/decoder_cpu/: color_cpu.c  depth_cpu.c
src/decoder_cuda/: color_cuda.c  color_nvjpeg.c
src/decoder_ocl/: depth.cl  depth_ocl.cpp
src/driver_libusb/: driver_libusb.c  usb_dev.c  usb_dev.h  usb_stream.c
